--- a/src/app/components/proveedor/proveedor.component.html
+++ b/src/app/components/proveedor/proveedor.component.html
@@ -9,7 +9,7 @@
     (click)='this.router.navigateByUrl("menu/(opt:addProveedor)")'>
     <i class="fa fa-plus-circle " aria-hidden="true"></i>&nbsp;Nuevo Proveedor
     </button>
-    <table class="table table-hover table-bordered" width="100%" cellspacing="0" id="tablaProveedor"> 
+    <table class="table table-hover table-bordered table-light table-striped" width="100%" cellspacing="0" id="tablaProveedor"> 
         <thead class="thead-dark">
             <tr>
                 <th>N°</th>
