--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -44,7 +44,7 @@
       </a>
     </li>  
     <li class="nav-item" [ngClass]="{ 'active': producto.isActive }">
-      <a class="nav-link" (click)="this.router.navigateByUrl('/menu/(opt:categoria)');" routerLinkActive #producto="routerLinkActive">
+      <a class="nav-link" (click)="this.router.navigateByUrl('/menu/(opt:ventas)');" routerLinkActive #producto="routerLinkActive">
         <span class="menu-title">Ventas</span>
         <i class="fas fa-cash-register menu-icon" style="color:#EA320B;"></i>        
       </a>
