--- a/src/app/components/categoria/categoria.component.html
+++ b/src/app/components/categoria/categoria.component.html
@@ -9,7 +9,7 @@
     (click)="router.navigateByUrl('/menu/(opt:addCategoria)')">
     <i class="fa fa-plus-circle " aria-hidden="true"></i>&nbsp;Nueva Categoria
     </button>
-    <table class="table table-hover table-bordered" width="100%" cellspacing="0" id="tablaCategoria">
+    <table class="table table-hover table-bordered table-light table-striped" width="100%" cellspacing="0" id="tablaCategoria">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">N°</th>
