--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="table-responsive" *ngIf="estado">  
     <h1><b>LISTA PROVEEDORES</b></h1>   
-    <table class="table table-hover table-bordered" width="100%" cellspacing="0" id="tablaCliente">
+    <table class="table table-hover table-bordered table-light table-striped" width="100%" cellspacing="0" id="tablaCliente">
         <thead class="thead-dark">
             <tr>
                 <th>N°</th>
