--- a/src/app/components/compras/lista-invoice/lista-invoice.component.html
+++ b/src/app/components/compras/lista-invoice/lista-invoice.component.html
@@ -9,7 +9,7 @@
     (click)='this.router.navigateByUrl("menu/(opt:addInvoice)")'>
     <i class="fa fa-plus-circle " aria-hidden="true"></i>&nbsp;Nuevo Invoice
     </button>
-    <table class="table table-hover table-bordered table-striped" width="100%" cellspacing="0" id="tablaInvoice">
+    <table class="table table-hover table-bordered table-light table-striped" width="100%" cellspacing="0" id="tablaInvoice">
         <thead class="thead-dark">
             <tr>
                 <th>Id</th>
