--- a/src/app/components/compras/registro-compra/registro-compra.component.html
+++ b/src/app/components/compras/registro-compra/registro-compra.component.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <div class="row col-lg-12 mx-auto" *ngIf="estado" >    
-    <div class="card col-lg-3 p-0" style="max-height: 330px;">
+    <div class="card col-lg-4 p-0 mb-4" style="max-height: 330px;">
         <div class="card-header">
             <h4 style="color: #EA320B;">Agregar Compra</h4>
         </div>        
@@ -34,37 +34,37 @@
     </div>    
     
     
-        <div class="col-lg-8 table-responsive p-0 ml-4 card">
-            <div class="card-header">
-                <h4 style="color: #EA320B;">Detalle Compra</h4>
-            </div>
-            <div class="card-body">
-                <table class="table table-hover table-bodered" width="100%" cellspacing="0" id="tablaCarrito">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>N°</th>
-                            <th>Imagen</th>
-                            <th>Nombre</th>
-                            <th>Cantidad</th>
-                            <th>Precio</th>
-                            <th>Monto</th>
-                            <th>Eliminar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let prod of compraService.items;let i = index">
-                            <td>{{i+1}}</td>
-                            <td><img style="border-radius: 0px;height: 50px;width: 50px;" src="http://192.168.1.13:1151/api/producto/verArchivo/{{prod.imagen}}" alt=""></td>
-                            <td>{{prod.nombre_prod}}</td>
-                            <td><input type="text" [(ngModel)]="cajas[i]" maxlength="3" class="form-control" (keyup)="aumentar(prod.prod_id,i)" value="{{prod.cant_ord_det}}" /></td>
-                            <td>{{prod.unit_price_ord_det}}</td>
-                            <td>{{prod.unit_price_ord_det * prod.cant_ord_det}}</td>
-                            <td><a (click)="eliminar(prod.prod_id)" class="btn-floating btn-danger btn-sm"><i class="fas fa-times" style="color: #ccc;"></i></a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div> 
+    <div class="col-lg-7 table-responsive p-0 ml-4 card">
+        <div class="card-header">
+            <h4 style="color: #EA320B;">Detalle Compra</h4>
         </div>
+        <div class="card-body">
+            <table class="table table-hover table-bodered" width="100%" cellspacing="0" id="tablaCarrito">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>N°</th>
+                        <th>Imagen</th>
+                        <th>Nombre</th>
+                        <th>Cantidad</th>
+                        <th>Precio</th>
+                        <th>Monto</th>
+                        <th>Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let prod of compraService.items;let i = index">
+                        <td>{{i+1}}</td>
+                        <td><img style="border-radius: 0px;height: 50px;width: 50px;" src="http://192.168.1.13:1151/api/producto/verArchivo/{{prod.imagen}}" alt=""></td>
+                        <td>{{prod.nombre_prod}}</td>
+                        <td><input type="text" [(ngModel)]="cajas[i]" maxlength="3" class="form-control" (keyup)="aumentar(prod.prod_id,i)" value="{{prod.cant_ord_det}}" /></td>
+                        <td>{{prod.unit_price_ord_det}}</td>
+                        <td>{{prod.unit_price_ord_det * prod.cant_ord_det}}</td>
+                        <td><a (click)="eliminar(prod.prod_id)" class="btn-floating btn-danger btn-sm"><i class="fas fa-times" style="color: #ccc;"></i></a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div> 
+    </div>
     
     
 </div>
