--- a/src/app/components/empleado/empleado.component.html
+++ b/src/app/components/empleado/empleado.component.html
@@ -9,7 +9,7 @@
     (click)='this.router.navigateByUrl("menu/(opt:formEmpleado)")'>
     <i class="fa fa-plus-circle " aria-hidden="true"></i>&nbsp;Nuevo Empleado
     </button>    
-    <table class="table table-hover table-bordered" width="100%" cellspacing="0" id="tablaEmpleado">
+    <table class="table table-hover table-bordered table-light table-striped" width="100%" cellspacing="0" id="tablaEmpleado">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">N°</th>
