--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -10,7 +10,7 @@
     (click)='this.router.navigateByUrl("menu/(opt:addProducto)")'>
     <i class="fa fa-plus-circle " aria-hidden="true"></i>&nbsp;Nuevo Producto
     </button>
-    <table class="table table-hover table-bordered" width="100%" cellspacing="0" id="tablaProducto">
+    <table class="table table-hover table-bordered table-light table-striped" width="100%" cellspacing="0" id="tablaProducto">
         <thead class="thead-dark">
             <tr>
                 <th hidden></th>
@@ -27,7 +27,7 @@
             <tr *ngFor="let u of lista; let i =index">
                 <th scope="row">{{i+1}}</th>
                 <td hidden>{{u.id_prod}}</td>                
-                <td ><img src='http://192.168.1.13:1151/api/producto/verArchivo/{{u.nom_producto}}' style="border-radius: 0px;width: 100px;height: 100px;" alt=""></td>
+                <td ><img src='http://192.168.1.13:1151/api/producto/verArchivo/{{u.nom_producto}}' style="border-radius: 0px;width: 50px;height: 50px;" alt=""></td>
                 <td>{{u.nom_prod}}</td>
                 <td>{{u.nom_cat}}</td>
                 <td>{{u.stock_prod}}</td>
