--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-
+<div *ngIf="utilsService.cargaEstado" class="blocker">
+    <div class="row h-100 justify-content-center align-items-center" *ngIf="utilsService.cargaEstado">
+        <div class="fa-4x" >
+            <i class="fas fa-spinner fa-spin"></i>    
+        </div>
+    </div>
+</div>
 <div (click)="actividad()" (keyup)="actividad()" (mousewheel)="actividad()" (mousemove)="actividad()">
-    <router-outlet></router-outlet>
+    <router-outlet ></router-outlet>
 </div>
