--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,12 @@
 
 	
+.blocker {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height:100%;
+    width:100%;        /* hacemos que ocupe toda la pantalla a cualquier resolución*/
+    z-index: 50;        /* lo colocamos por encima del resto de componentes*/
+    background: black;
+    opacity: 0.5;
+    }
