--- a/src/app/components/compras/edit-compras/edit-compras.component.html
+++ b/src/app/components/compras/edit-compras/edit-compras.component.html
@@ -70,13 +70,17 @@
                         <td>{{i+1}}</td>
                         <td><img style="border-radius: 0px;height: 50px;width: 50px;" src="http://192.168.1.13:1151/api/producto/verArchivo/{{prod.nom_imagen}}" alt=""></td>
                         <td>{{prod.nom_prod}}</td>
-                        <td><input type="text" [disabled]="+eCompra.est_ord_cab === 2" style="color: black;" (keyup)="aumentar(prod)" (keypress)="soloNumeros($event)" maxlength="3" [(ngModel)]="prod.cant_ord_det" class="form-control" value="{{prod.cant_ord_det}}"></td>
-                        <td><input type="text" [disabled]="+eCompra.est_ord_cab === 2" style="color: black;" (keyup)="aumentarPrecio(prod)" (keypress)="soloNumeros($event)" maxlength="9" [(ngModel)]="prod.unit_price_ord_det" class="form-control" value="{{prod.unit_price_ord_det}}"></td>
-                        <td>{{prod.unit_price_ord_det * prod.cant_ord_det}}</td>
+                        <td><input type="number" step="any" [disabled]="+eCompra.est_ord_cab === 2" style="color: black;" (keyup)="aumentar(prod)"  maxlength="3" [(ngModel)]="prod.cant_ord_det" class="form-control" value="{{prod.cant_ord_det}}"></td>
+                        <td><input type="number" step="any" [disabled]="+eCompra.est_ord_cab === 2" style="color: black;" (keyup)="aumentarPrecio(prod)"  maxlength="9" [(ngModel)]="prod.unit_price_ord_det" class="form-control" value="{{prod.unit_price_ord_det}}"></td>
+                        <td>{{(prod.unit_price_ord_det * prod.cant_ord_det) | number:'0.1-5'}}</td>
                         <td *ngIf="+eCompra.est_ord_cab != 2"><button (click)="eliminar(prod.ord_comp_det,prod.nom_prod)" class="btn-floating btn-danger btn-sm"><i class="fas fa-times" style="color: #ccc;"></i></button></td>
-                    </tr>
-                </tbody>
+                    </tr>                    
+                </tbody>                
             </table> 
+            <div class="float-right">
+                <p style="display: inline-block;">TOTAL :</p> 
+                <input type="text" disabled style="color: black;display: inline-block;" class="form-control" value="{{total | number:'0.1-5'}}">
+            </div>
         </div>
     </div>
 </div>
@@ -99,7 +103,7 @@
           </div>                    
         </form>
         <div class="row col-lg-12 mx-lg-3 mb-3" >
-            <div class="card col-lg-3 py-3 ml-3 mb-3 container" *ngFor="let pr of listaFiltro">
+            <div class="card col-lg-4 col-md-4 py-3 ml-3 mb-3" style="max-width: 420px;" *ngFor="let pr of listaFiltro">
                 <div class="col-lg-12 col-12 d-flex justify-content-center">
                     <img style="width: 70px;height: 70px;" src="http://192.168.1.13:1151/api/producto/verArchivo/{{pr.nom_producto}}" alt="">                                    
                     &nbsp;<p>Nombre: {{pr.nom_prod}}</p> 
@@ -130,11 +134,11 @@
         <form>
             <div class="mb-3">
                 <label for="recipient-name" class="col-form-label">Precio:</label>
-                <input type="text" (keypress)="soloNumeros($event)" [(ngModel)]="precio" [ngModelOptions]="{standalone: true}" class="form-control" >
+                <input type="number" step="any" [(ngModel)]="precio" [ngModelOptions]="{standalone: true}" class="form-control" >
               </div>
               <div class="mb-3">
                 <label for="message-text" class="col-form-label">Cantidad:</label>
-                <input type="text" (keypress)="soloNumeros($event)" [(ngModel)]="cantidad" [ngModelOptions]="{standalone: true}" class="form-control">
+                <input type="number" step="any" [(ngModel)]="cantidad" [ngModelOptions]="{standalone: true}" class="form-control">
               </div>
         </form>
       </div>
