--- a/src/app/components/compras/registro-compra/registro-compra.component.html
+++ b/src/app/components/compras/registro-compra/registro-compra.component.html
@@ -4,13 +4,17 @@
     </div>
 </div>
 <div class="row col-lg-12 mx-auto" *ngIf="estado" >    
-    <div class="card col-lg-4 p-0 mb-4" style="max-height: 370px;">
+    <div class="card col-lg-4 p-0 mb-4" style="max-height: 450px;">
         <div class="card-header">
             <i class="fas fa-times fa-lg float-right my-auto py-auto" 
             style="color: #EA320B;display: inline-block;cursor: pointer;" (click)="volver()"></i>
             <h4 style="color: #EA320B;">Agregar Compra</h4>
         </div>        
         <div class="card-body">
+            <div class="form-group">
+                <label for="">Fecha</label>
+                <input type="text" disabled style="color: black;"  class="form-control" value="{{fechaActual | date : 'dd/MM/yyyy'}}" >                
+            </div>
             <form [formGroup]="nuevaCompra" class='' (ngSubmit)="agregar()">                   
                 <div class="form-group">
                     <label for="">Condicion de Envio</label>
@@ -41,7 +45,7 @@
             <h4 style="color: #EA320B;">Detalle Compra</h4>
         </div>
         <div class="card-body">
-            <table class="table table-hover table-bodered" width="100%" cellspacing="0" id="tablaCarrito">
+            <table class="table table-hover table-bodered " width="100%" cellspacing="0" id="tablaCarrito">
                 <thead class="thead-dark">
                     <tr>
                         <th>N°</th>
@@ -60,11 +64,15 @@
                         <td>{{prod.nombre_prod}}</td>
                         <td><input type="text" [(ngModel)]="cajas[i]" maxlength="3" class="form-control" (keyup)="aumentar(prod.prod_id,i)" (keypress)="soloNumeros($event)" value="{{prod.cant_ord_det}}" /></td>
                         <td><input type="text" (keyup)="aumentarPrecio(prod)" (keypress)="soloNumeros($event)" maxlength="9" [(ngModel)]="prod.unit_price_ord_det" class="form-control" value="{{prod.unit_price_ord_det}}"></td>
-                        <td>{{prod.unit_price_ord_det * prod.cant_ord_det}}</td>
+                        <td>{{(prod.unit_price_ord_det * prod.cant_ord_det) | number:'0.1-5' }}</td>
                         <td><a (click)="eliminar(prod.prod_id,prod.imagen,prod.nombre_prod)" class="btn-floating btn-danger btn-sm"><i class="fas fa-times" style="color: #ccc;"></i></a></td>
                     </tr>
                 </tbody>
             </table>
+            <div class="float-right">
+                <p style="display: inline-block;">TOTAL :</p> 
+                <input type="text" disabled style="color: black;display: inline-block;" class="form-control" value="{{total | number:'0.1-5'}}">
+            </div>
         </div> 
     </div>
     
