--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,7 @@
+
 <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+  <div class="blocker" *ngIf="utilsService.cargaEstado">  
+  </div>
   <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
     <a class="navbar-brand brand-logo" routerLink="/menu"><img style="width: 200px;height: 50px;" src="assets/images/logoTrinketV.jpg" alt="logo" /></a>
     <a class="navbar-brand brand-logo-mini" routerLink="/menu"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
@@ -42,7 +45,7 @@
             <span class="availability-status online"></span>
           </div>
           <div class="nav-profile-text">
-            <p class="mb-1 text-black">Gian Marco</p>
+            <p class="mb-1 text-black">{{empleadoService.empleadolog.nom_emp}}</p>
           </div>
         </a>
         <div class="dropdown-menu navbar-dropdown" ngbDropdownMenu aria-labelledby="profileDropdown">
