--- a/src/app/user-pages/login/login.component.html
+++ b/src/app/user-pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center auth px-0" style="margin-top: 50px;">
+<div class="d-flex align-items-center auth px-0" style="height: 100vh;">
   <div class="row w-100 mx-0">
     <div class="col-lg-4 mx-auto">
       <div class="auth-form-light text-left py-5 px-4 px-sm-5">
@@ -21,10 +21,10 @@
             </small>
           </div>
           <div class="mt-3">
-            <button class="btn btn-block btn-danger btn-lg font-weight-medium auth-form-btn" type="submit">I N I C I A R</button>
+            <button class="btn btn-block btn-danger btn-lg font-weight-medium auth-form-btn ml-0" type="submit">I N I C I A R</button>
           </div>
           <div class="my-2 d-flex justify-content-between align-items-center">            
-            <a href="javascript:(void)" class="auth-link text-black">Olvidaste tu contraseña?</a>
+            <a routerLink="/recuperar" class="auth-link text-black">Olvidaste tu contraseña?</a>
           </div>         
           
         </form>
