--- a/src/app/components/producto/add-producto/add-producto.component.html
+++ b/src/app/components/producto/add-producto/add-producto.component.html
@@ -55,27 +55,27 @@
                 <div class="row">                    
                     <div class="col-lg-4">                        
                         <input type="file" class="d-none" (change)="onPhotoSelected1($event)" #photoInput1 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected1 || 'assets/no-image.png'" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected1 || 'assets/no-image.png'" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput1.click()">                          
                     </div>  
                     <div class="col-lg-4">
                         <input type="file" class="d-none" (change)="onPhotoSelected2($event)" #photoInput2 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected2 || 'assets/no-image.png'" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected2 || 'assets/no-image.png'" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput2.click()">
                     </div>
                     <div class="col-lg-4">                        
                         <input type="file" class="d-none" (change)="onPhotoSelected3($event)" #photoInput3 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected3 || 'assets/no-image.png'" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected3 || 'assets/no-image.png'" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput3.click()">                                           
                     </div>
                     <div class="col-lg-4">
                         <input type="file" class="d-none" (change)="onPhotoSelected4($event)" #photoInput4 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected4 || 'assets/no-image.png'" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected4 || 'assets/no-image.png'" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput4.click()"> 
                     </div>
                     <div class="col-lg-4">
                         <input type="file" class="d-none" (change)="onPhotoSelected5($event)" #photoInput5 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected5 || 'assets/no-image.png'" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected5 || 'assets/no-image.png'" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput5.click()">
                     </div>
                 </div>
