--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -5,7 +5,7 @@
 </div>
   <!--Main layout-->
   <main *ngIf="estado">
-    <div class="container">   
+    <div class="">   
       <div class="alert fade show d-flex justify-content-center align-items-center" role="alert" *ngIf="compraService.agregado"
       style="width: 100%;height: 40px;margin-top: 0px;text-align: center;background: #5cb85c;">
         <strong>Producto agregado!</strong>     
@@ -97,7 +97,10 @@
                       <!--<span class="badge badge-pill danger-color">NEW</span>-->
                     </a>
                   </strong>
-                </h5>    
+                </h5> 
+                <a href="" class="grey-text">
+                  <h5>Stock :{{u.stock_prod}}</h5>
+                </a>   
                 <button type="button" class="btn btn-outline-primary btn-block px-3" data-bs-toggle="modal" 
                     data-bs-target="#cantPrecio" (click)="agregar(u)" data-bs-whatever="@getbootstrap">
                         Añadir</button>                            
