--- a/src/app/components/compras/lista-compras/lista-compras.component.html
+++ b/src/app/components/compras/lista-compras/lista-compras.component.html
@@ -5,6 +5,15 @@
 </div>
 <div *ngIf="estado">
     <h1><b>MANTENIMIENTO COMPRAS</b></h1>
+    <div class="row col-12 p-0">
+        <div class="col-lg-4">
+            <input style="display:inline-block" type="date" [max]="actualString"
+         style="height: 50px;" [(ngModel)]="fecha" (change)="filtraFecha()" class="form-control mb-3">  
+        </div> 
+        <div class="col-lg-3 col-md-3 col-12 col-sm-6 mb-3">
+            <button style="display:inline-block" (click)="listarCompras()" class="btn btn-outline-success btn-block">Listar Todo</button>   
+        </div>  
+    </div>
     <div class="card">
         <div class="card-header py-3">
             <i class="fas fa-table"></i>
@@ -26,7 +35,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let com of lista;let i = index">
+                        <tr *ngFor="let com of listaFiltro;let i = index">
                             <td style="font-weight: bold;">{{i+1}}</td>
                             <td>{{com.id_ord_comp_cab}}</td>
                             <td><a (click)="irDetalle(com.id_ord_comp_cab)" 
