--- a/src/app/components/compras/registro-compra/registro-compra.component.html
+++ b/src/app/components/compras/registro-compra/registro-compra.component.html
@@ -3,8 +3,8 @@
         <i class="fas fa-spinner fa-spin"></i>    
     </div>
 </div>
-<div class="row col-lg-12 mx-auto" *ngIf="estado" >    
-    <div class="card col-lg-4 p-0 mb-4" style="max-height: 450px;">
+<div class="row col-xl-4 mx-0" style="display: inline-block;" *ngIf="estado" >    
+    <div class="card col-lg-12 p-0 mb-4">
         <div class="card-header">
             <i class="fas fa-times fa-lg float-right my-auto py-auto" 
             style="color: #EA320B;display: inline-block;cursor: pointer;" (click)="volver()"></i>
@@ -37,29 +37,29 @@
                 </button>                                              
             </form>            
         </div>
-    </div>    
-    
-    
-    <div class="col-lg-7 table-responsive p-0 ml-0 ml-lg-4 card">
+    </div>       
+</div>
+<div class="row col-xl-8 mx-0" *ngIf="estado" style="display: inline-block;">
+    <div class="col-lg-12 table-responsive p-0 ml-0  card">
         <div class="card-header">
             <h4 style="color: #EA320B;">Detalle Compra</h4>
         </div>
         <div class="card-body">
-            <table class="table table-hover table-bodered " width="100%" cellspacing="0" id="tablaCarrito">
+            <table class="table table-bodered " width="100%" cellspacing="0" id="tablaCarrito">
                 <thead class="thead-dark">
                     <tr>
-                        <th>N°</th>
-                        <th>Imagen</th>
-                        <th>Nombre</th>
-                        <th>Cantidad</th>
-                        <th>Precio</th>
-                        <th>Monto</th>
-                        <th>Eliminar</th>
+                        <th style="font-weight: bold;">N°</th>
+                        <th style="font-weight: bold;">Imagen</th>
+                        <th style="font-weight: bold;">Nombre</th>
+                        <th style="font-weight: bold;">Cantidad</th>
+                        <th style="font-weight: bold;">Precio</th>
+                        <th style="font-weight: bold;">Monto</th>
+                        <th style="font-weight: bold;">Eliminar</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let prod of compraService.items;let i = index">
-                        <td>{{i+1}}</td>
+                        <td style="font-weight: bold;">{{i+1}}</td>
                         <td><img style="border-radius: 0px;height: 50px;width: 50px;" src="http://192.168.1.13:1151/api/producto/verArchivo/{{prod.imagen}}" alt=""></td>
                         <td>{{prod.nombre_prod}}</td>
                         <td><input type="text" [(ngModel)]="cajas[i]" maxlength="3" class="form-control" (keyup)="aumentar(prod.prod_id,i)" (keypress)="soloNumeros($event)" value="{{prod.cant_ord_det}}" /></td>
@@ -75,8 +75,6 @@
             </div>
         </div> 
     </div>
-    
-    
 </div>
 
 
