--- a/src/app/components/empleado/empleado-form/empleado-form.component.html
+++ b/src/app/components/empleado/empleado-form/empleado-form.component.html
@@ -20,14 +20,14 @@
                 <div class="col-lg-6 p-2">
                     <div class="form-group">
                         <label for="">Nombre Empleado</label>
-                        <input type="text" [class.is-invalid]="nombreNoValido" class="form-control" placeholder="Nombres" formControlName='nom_user' >
+                        <input (keypress)="soloLetras($event)" type="text" [class.is-invalid]="nombreNoValido" class="form-control" placeholder="Nombres" formControlName='nom_user' >
                         <small *ngIf="nombreNoValido" class="text-danger">
                             Campo invalido
                           </small>
                     </div>
                     <div class="form-group">
                         <label for="">Apellido Empleado</label>
-                        <input class="form-control" [class.is-invalid]="apellidonNoValido" placeholder="Apellidos" formControlName='ape_user'>
+                        <input (keypress)="soloLetras($event)" class="form-control" [class.is-invalid]="apellidonNoValido" placeholder="Apellidos" formControlName='ape_user'>
                         <small *ngIf="apellidonNoValido" class="text-danger">
                             Campo invalido
                           </small>
