--- a/src/app/components/producto/up-producto/up-producto.component.html
+++ b/src/app/components/producto/up-producto/up-producto.component.html
@@ -55,25 +55,25 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <input type="file" class="d-none" (change)="onPhotoSelected1($event)" #photoInput1 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected1 || imagenes[0]" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected1 || imagenes[0]" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput1.click()">
 
                         <input type="file" class="d-none" (change)="onPhotoSelected2($event)" #photoInput2 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected2 || imagenes[1]" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected2 || imagenes[1]" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput2.click()">
                     </div>
                     <div class="col-lg-4">    
                         <input type="file" class="d-none" (change)="onPhotoSelected3($event)" #photoInput3 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected3 || imagenes[2]" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected3 || imagenes[2]" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput3.click()">
                         
                         <input type="file" class="d-none" (change)="onPhotoSelected4($event)" #photoInput4 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected4 || imagenes[3]" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected4 || imagenes[3]" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput4.click()">
                     </div>  
                     <div class="col-lg-4">    
                         <input type="file" class="d-none" (change)="onPhotoSelected5($event)" #photoInput5 >
-                        <img style='height: 270px;cursor: pointer;' [src]="photoSelected5 || imagenes[4]" class="img-fluid col-12" alt="No image"
+                        <img style='height: 270px;width: 270px;cursor: pointer;' [src]="photoSelected5 || imagenes[4]" class="mx-5 img-fluid col-12" alt="No image"
                             (click)="photoInput5.click()">
                     </div>  
                 </div>
