--- a/src/app/components/ventas/ventas.component.html
+++ b/src/app/components/ventas/ventas.component.html
@@ -5,11 +5,20 @@
 </div>
 <div *ngIf="estado">
     <h1><b>LISTA VENTAS</b></h1>
+    <div class="row col-12 p-0">
+        <div class="col-lg-4">
+            <input style="display:inline-block" type="date" [max]="actualString"
+         style="height: 50px;" [(ngModel)]="fecha" (change)="filtraFecha()" class="form-control mb-3">  
+        </div> 
+        <div class="col-lg-3 col-md-3 col-12 col-sm-6 mb-3">
+            <button style="display:inline-block" (click)="listarVentas()" class="btn btn-outline-success btn-block">Listar Todo</button>   
+        </div>  
+    </div>
     <div class="card">
         <div class="card-header py-3">
             <i class="fas fa-table"></i>
             Lista Ventas
-        </div>
+        </div>        
         <div class="card-body">
             <div class="table-responsive" >                
                 <table class="table table-hover  table-bordered" width="100%" cellspacing="0" id="tablaVentas">
@@ -24,7 +33,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let venta of lista">
+                        <tr *ngFor="let venta of listaFiltro">
                             <td style="font-weight: bold;">{{venta.id_vent_cab}}</td>
                             <td>{{venta.fecha_vent_cab | date : 'dd/MM/yyyy'}} {{venta.fecha_vent_cab | date : 'HH:mm:ss'}}</td>
                             <td>{{venta.fecha_entr_cab}}</td>
