--- a/src/app/user-pages/login/login.component.html
+++ b/src/app/user-pages/login/login.component.html
@@ -9,26 +9,36 @@
         <h6 class="font-weight-light">Autenticate a continuacion.</h6>
         <form class="pt-3" [formGroup]="forma" (ngSubmit)="autenticacion()">
           <div class="form-group">
-            <input type="email" [class.is-invalid]="emailNoValido" formControlName="email" class="form-control form-control-lg" placeholder="Correo">
+            <input type="email" [class.is-invalid]="emailNoValido" formControlName="email"
+              class="form-control form-control-lg" placeholder="Correo">
             <small *ngIf="emailNoValido" class="text-danger">
               Campo invalido
             </small>
           </div>
           <div class="form-group">
-            <input [class.is-invalid]="passNoValido" type="password" formControlName="pass" class="form-control form-control-lg" placeholder="Contraseña">
+            <input [class.is-invalid]="passNoValido" type="password" formControlName="pass"
+              class="form-control form-control-lg" placeholder="Contraseña">
             <small *ngIf="passNoValido" class="text-danger">
               Campo invalido
             </small>
           </div>
-          <div class="mt-3">
-            <button class="btn btn-block btn-danger btn-lg font-weight-medium auth-form-btn ml-0" type="submit">I N I C I A R</button>
+          <div class="form-group container">
+            <ngx-recaptcha2 #captchaElem [siteKey]="siteKey" formControlName="recaptcha">
+            </ngx-recaptcha2>
+            <small *ngIf="captchaNoValido" class="text-danger">
+              Marcar ReCaptcha
+            </small>
           </div>
-          <div class="my-2 d-flex justify-content-between align-items-center">            
+          <div class="mt-3">
+            <button class="btn btn-block btn-danger btn-lg font-weight-medium auth-form-btn ml-0" type="submit">I N I C
+              I A R</button>
+          </div>
+          <div class="my-2 d-flex justify-content-between align-items-center">
             <a routerLink="/recuperar" class="auth-link text-black">Olvidaste tu contraseña?</a>
-          </div>         
-          
+          </div>
+
         </form>
       </div>
     </div>
   </div>
-</div>  
+</div>
