--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item nav-profile">
-      <a routerLink='/empleado' class="nav-link">
+      <a (click)="perfil()" class="nav-link">
         <div class="nav-profile-image">
           <img src="assets/images/faces/user-rojo.png" alt="profile">
           <span class="login-status online"></span> <!--change to offline or busy as needed-->              
