--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <div class="blocker" *ngIf="utilsService.cargaEstado">  
   </div>
   <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-    <a class="navbar-brand brand-logo" routerLink="/menu"><img style="width: 200px;height: 50px;" src="assets/images/logoTrinketV.jpg" alt="logo" /></a>
+    <a class="navbar-brand brand-logo" (click)="reportes()"><img style="width: 200px;height: 50px;" src="assets/images/logoTrinketV.jpg" alt="logo" /></a>
     <a class="navbar-brand brand-logo-mini" routerLink="/menu"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
   </div>    
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
