--- a/src/app/components-cli/principal/principal.component.html
+++ b/src/app/components-cli/principal/principal.component.html
@@ -57,7 +57,7 @@
 
         <form class="form-inline">
           <div class="md-form my-0">
-            <input class="form-control mr-sm-2" [(ngModel)]="texto" [ngModelOptions]="{standalone: true}"
+            <input style="color:white" class="form-control mr-sm-2" [(ngModel)]="texto" [ngModelOptions]="{standalone: true}"
               (keyup)="buscar()" type="text" placeholder="Buscar.." aria-label="Search">
           </div>
         </form>
