--- a/src/app/components/compras/compras.component.scss
+++ b/src/app/components/compras/compras.component.scss
@@ -20,8 +20,8 @@
 .custom-pagination ::ng-deep .ngx-pagination .current {
     background: #EA320B;
 }
-.custom-pagination ::ng-deep .ngx-pagination .current {
-    background: #EA320B;
+.custom-pagination ::ng-deep .ngx-pagination .pagination-previous {
+    color: #EA320B;
   }
   .custom-pagination ::ng-deep .ngx-pagination .pagination-next {
     color: #EA320B;
