--- a/src/app/components/ventas/ventas.component.html
+++ b/src/app/components/ventas/ventas.component.html
@@ -28,7 +28,7 @@
                             <th style="font-weight: bold;">Fecha Venta</th>
                             <th style="font-weight: bold;">Fecha Entrega</th>
                             <th style="font-weight: bold;">Cliente</th>
-                            <th style="font-weight: bold;">N° transaccion</th>
+                            <th style="font-weight: bold;">Tipo Comprobante</th>
                             <th style="font-weight: bold;">Estado</th>
                             <th style="font-weight: bold;">Comprobante</th>                
                         </tr>
