--- a/src/app/components-cli/orden-venta/orden-venta.component.html
+++ b/src/app/components-cli/orden-venta/orden-venta.component.html
@@ -1,7 +1,7 @@
-<main class="mt-2">
+<main class="mt-2 pt-5">
     <div class="container wow fadeIn">
         <!-- Heading -->
-        <h1 class="my-3 h1 text-center">Formulario Venta</h1>
+        
         <!--Grid row-->
         <div class="row">
             <!--Grid column-->
@@ -64,7 +64,7 @@
                     <li *ngFor="let item of carritoService.listaCarrito" 
                     class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h4 class="my-0">{{item.nombre_prod | uppercase}}</h4>  
+                            <h4 class="my-0">{{item.nombre_prod.toString().substr(0,25)+'...' | uppercase}}</h4>  
                         </div>
                         <span class="text-muted">S/. {{item.base_imp_vent_det | number:'0.1-5'}} x {{item.cantidad}}</span>
                     </li>                    
