--- a/src/app/components-cli/pedido/pedido.component.html
+++ b/src/app/components-cli/pedido/pedido.component.html
@@ -29,11 +29,13 @@
                 <tr *ngFor="let pro of carritoService.listaCarrito">
                   <th scope="row" class="border-0">
                     <div class="p-2">
-                      <img src="http://192.168.1.13:1151/api/producto/verArchivo/{{pro.imagen}}" alt="" width="70"
+                      <a (click)="irProducto(pro.id_prod)">
+                        <img src="http://192.168.1.13:1151/api/producto/verArchivo/{{pro.imagen}}" alt="" width="70"
                         class="img-fluid rounded shadow-sm">
+                      </a>
                       <div class="ml-3 d-inline-block align-middle">
                         <h5 class="mb-0">
-                          <p class="text-dark d-inline-block align-middle">{{pro.nombre_prod}}</p>
+                          <p class="text-dark d-inline-block align-middle">{{pro.nombre_prod.toString().substr(0,25)+'...'}}</p>
                         </h5>
                       </div>
                     </div>
