--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -34,10 +34,10 @@
                         <td style="font-weight: bold;">{{i+1}}</td>
                         <td hidden>{{u.id_prod}}</td>                                                             
                         <td class="d-flex justify-content-center"><img src='http://192.168.1.13:1151/api/producto/verArchivo/{{u.nom_producto}}' style="border-radius: 0px;width: 50px;height: 50px;" alt=""></td>
-                        <td>{{u.nom_prod}}</td>
+                        <td>{{u.nom_prod.toString().substr(0,25)+'...'}}</td>
                         <td>{{u.nom_cat}}</td>
                         <td>{{u.stock_prod}}</td>
-                        <td>{{u.precio_unit_prod}}</td>
+                        <td>{{u.precio_unit_prod | number:'0.1-5'}}</td>
                         <td>
                             <button class="btn-floating btn-outline-warning btn-sm mr-2 mb-2" (click)="editar(u.id_prod)"><i class="fa fa-pencil" aria-hidden="true"></i></button>
                             <button class="btn-floating btn-outline-danger btn-sm mr-2 mb-2" *ngIf="empleadoService.empleadolog.nombre_rol === 'Administrador'"
