--- a/src/app/components/proveedor/add-proveedor/add-proveedor.component.html
+++ b/src/app/components/proveedor/add-proveedor/add-proveedor.component.html
@@ -3,7 +3,7 @@
         <i class="fas fa-spinner fa-spin"></i>    
     </div>
 </div>
-<div class="col-lg-12 mx-auto" *ngIf="estado">    
+<div class="col-lg-10 offset-lg-1 mx-auto" *ngIf="estado">    
     <div class="card">
         <div class="card-header">
             <i class="fas fa-times fa-lg float-right my-auto py-auto" 
