--- a/src/app/components-cli/cli-perfil/cli-perfil.component.html
+++ b/src/app/components-cli/cli-perfil/cli-perfil.component.html
@@ -46,6 +46,7 @@
                   <div class="mb-3" *ngIf="rod">
                     <label style="display: block;">N° Documento:</label>
                     <input type="text" (keypress)="soloNumeros($event)" [class.is-invalid]="dniNoValido"
+                      ng-maxlength="8"
                       formControlName="num_doc_dni" class="form-control" placeholder="N° Documento">
                     <small *ngIf="dniNoValido" class="text-danger">
                       Campo invalido
