--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
     <a class="navbar-brand brand-logo" (click)="reportes()"><img style="width: 200px;height: 50px;" src="assets/images/logoTrinketV.jpg" alt="logo" /></a>
-    <a class="navbar-brand brand-logo-mini" routerLink="/menu"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+    <a class="navbar-brand brand-logo-mini" (click)="reportes()"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
   </div>    
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize" (click)="toggleSidebar()">
